@@ -108,13 +108,15 @@ switch ($_REQUEST['action']) {
 		$localplay->delete_track($id); 
 	
 		// Wait incase we just deleted what we were playing
-		sleep(1);
+		sleep(3);
 		$objects = $localplay->get(); 
 		$status = $localplay->status(); 
 
 		ob_start(); 
-		require_once Config::get('prefix') . '/templates/show_localplay_playlist.inc.php'; 
-		$results['localplay_playlist'] = ob_get_contents(); 	
+		Browse::set_type('playlist_localplay');
+		Browse::set_static_content(1);
+		Browse::show_objects($objects);
+		$results['browse_content'] = ob_get_contents();   
 		ob_end_clean(); 
 
 	break; 
